// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BoxResultsDisplay > BoxResultsDisplay component > should match snapshot for basic packing result 1`] = `
<div
  class="mt-4 space-y-4"
>
  <h3
    class="text-2xl font-bold text-gray-900 dark:text-white"
  >
    Box Packing Results
  </h3>
  <p
    class="text-gray-700 dark:text-gray-300"
  >
    Items will be packed into 
    <strong>
      1
    </strong>
     box(es).
  </p>
  <div
    class="grid gap-4 md:grid-cols-2 xl:grid-cols-3"
  >
    <article
      class="flex h-full flex-col overflow-hidden rounded-3xl border border-gray-100 bg-white shadow-sm dark:border-gray-700 dark:bg-gray-800"
    >
      <div
        class="flex items-center gap-2 bg-primary px-4 py-3 text-white"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-package2 lucide-package-2"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 3v6"
          />
          <path
            d="M16.76 3a2 2 0 0 1 1.8 1.1l2.23 4.479a2 2 0 0 1 .21.891V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V9.472a2 2 0 0 1 .211-.894L5.45 4.1A2 2 0 0 1 7.24 3z"
          />
          <path
            d="M3.054 9.013h17.893"
          />
        </svg>
        <h4
          class="text-lg font-semibold"
        >
          Box 
          1
          : 
          Test Box
        </h4>
      </div>
      <div
        class="space-y-4 p-4"
      >
        <div
          class="space-y-2 text-sm text-gray-700 dark:text-gray-300"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ruler"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.3 15.3a2.4 2.4 0 0 1 0 3.4l-2.6 2.6a2.4 2.4 0 0 1-3.4 0L2.7 8.7a2.41 2.41 0 0 1 0-3.4l2.6-2.6a2.41 2.41 0 0 1 3.4 0Z"
              />
              <path
                d="m14.5 12.5 2-2"
              />
              <path
                d="m11.5 9.5 2-2"
              />
              <path
                d="m8.5 6.5 2-2"
              />
              <path
                d="m17.5 15.5 2-2"
              />
            </svg>
            <span
              class="font-semibold text-gray-900 dark:text-white"
            >
              Box Dimensions:
            </span>
            <span>
              200
               × 
              150
               × 
              100
               mm
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-ruler"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.3 15.3a2.4 2.4 0 0 1 0 3.4l-2.6 2.6a2.4 2.4 0 0 1-3.4 0L2.7 8.7a2.41 2.41 0 0 1 0-3.4l2.6-2.6a2.41 2.41 0 0 1 3.4 0Z"
              />
              <path
                d="m14.5 12.5 2-2"
              />
              <path
                d="m11.5 9.5 2-2"
              />
              <path
                d="m8.5 6.5 2-2"
              />
              <path
                d="m17.5 15.5 2-2"
              />
            </svg>
            <span
              class="font-semibold text-gray-900 dark:text-white"
            >
              Items Dimensions:
            </span>
            <span>
              100
               × 
              80
               × 
              80
               mm
            </span>
          </div>
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-scale"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 3v18"
              />
              <path
                d="m19 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M3 7h1a17 17 0 0 0 8-2 17 17 0 0 0 8 2h1"
              />
              <path
                d="m5 8 3 8a5 5 0 0 1-6 0zV7"
              />
              <path
                d="M7 21h10"
              />
            </svg>
            <span
              class="font-semibold text-gray-900 dark:text-white"
            >
              Total Weight:
            </span>
            <span>
              2000
              g / 
              5000
              g
            </span>
          </div>
        </div>
        <div
          class="space-y-3"
        >
          <div>
            <div
              class="mb-1 flex justify-between text-sm font-semibold text-gray-700 dark:text-gray-300"
            >
              <span>
                Weight Utilization:
              </span>
              <span>
                40.0
                %
              </span>
            </div>
            <div
              class="h-2.5 w-full rounded-full bg-gray-200 dark:bg-gray-700"
            >
              <div
                class="h-2.5 rounded-full bg-green-500"
                style="width: 40%;"
              />
            </div>
          </div>
          <div>
            <div
              class="mb-1 flex justify-between text-sm font-semibold text-gray-700 dark:text-gray-300"
            >
              <span>
                Volume Utilization:
              </span>
              <span>
                9.3
                %
              </span>
            </div>
            <div
              class="h-2.5 w-full rounded-full bg-gray-200 dark:bg-gray-700"
            >
              <div
                class="h-2.5 rounded-full bg-green-500"
                style="width: 9.333333333333334%;"
              />
            </div>
          </div>
        </div>
        <div>
          <h5
            class="mb-2 text-base font-semibold text-gray-900 dark:text-white"
          >
            Items in this box:
          </h5>
          <div
            class="overflow-x-auto rounded-2xl border border-gray-200 dark:border-gray-700"
          >
            <table
              class="w-full text-sm"
            >
              <thead
                class="bg-gray-50 dark:bg-gray-900"
              >
                <tr>
                  <th
                    class="px-3 py-2 text-left"
                  >
                    Item
                  </th>
                  <th
                    class="px-3 py-2 text-left"
                  >
                    Qty
                  </th>
                  <th
                    class="px-3 py-2 text-left"
                  >
                    Weight
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="border-t border-gray-100 dark:border-gray-800"
                >
                  <td
                    class="px-3 py-2"
                  >
                    <div
                      class="font-medium text-gray-900 dark:text-white"
                    >
                      Small Item
                    </div>
                    <div
                      class="text-xs text-gray-500 dark:text-gray-400"
                    >
                      50
                      ×
                      40
                      ×
                      30
                      mm
                    </div>
                  </td>
                  <td
                    class="px-3 py-2 text-gray-700 dark:text-gray-300"
                  >
                    2
                  </td>
                  <td
                    class="px-3 py-2 text-gray-700 dark:text-gray-300"
                  >
                    1000
                    g
                  </td>
                </tr>
                <tr
                  class="border-t border-gray-100 dark:border-gray-800"
                >
                  <td
                    class="px-3 py-2"
                  >
                    <div
                      class="font-medium text-gray-900 dark:text-white"
                    >
                      Larger Item
                    </div>
                    <div
                      class="text-xs text-gray-500 dark:text-gray-400"
                    >
                      100
                      ×
                      80
                      ×
                      20
                      mm
                    </div>
                  </td>
                  <td
                    class="px-3 py-2 text-gray-700 dark:text-gray-300"
                  >
                    1
                  </td>
                  <td
                    class="px-3 py-2 text-gray-700 dark:text-gray-300"
                  >
                    1000
                    g
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>
`;

exports[`BoxResultsDisplay > BoxResultsDisplay component > should match snapshot for no fit result 1`] = `
<div
  class="mt-4 space-y-4"
>
  <h3
    class="text-2xl font-bold text-gray-900 dark:text-white"
  >
    Box Packing Results
  </h3>
  <div
    class="rounded-2xl border border-amber-200 bg-amber-50 p-4 text-amber-800 dark:border-amber-800 dark:bg-amber-950/40 dark:text-amber-200"
  >
    <div
      class="flex items-start gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-alert mt-0.5 shrink-0"
        fill="none"
        height="18"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
      <div>
        <p
          class="font-semibold"
        >
          Some items could not fit in any available box.
        </p>
        <div
          class="rounded-3xl border border-red-200 bg-white shadow-sm dark:border-red-800 dark:bg-gray-800"
        >
          <div
            class="flex items-center gap-2 rounded-t-3xl bg-red-600 px-4 py-3 text-white"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-alert"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="8"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="16"
                y2="16"
              />
            </svg>
            <span
              class="font-semibold"
            >
              Items That Don't Fit
            </span>
          </div>
          <div
            class="p-4"
          >
            <div
              class="overflow-x-auto rounded-2xl border border-gray-200 dark:border-gray-700"
            >
              <table
                class="w-full text-sm"
              >
                <thead
                  class="bg-gray-50 dark:bg-gray-900"
                >
                  <tr>
                    <th
                      class="px-3 py-2 text-left"
                    >
                      Item
                    </th>
                    <th
                      class="px-3 py-2 text-left"
                    >
                      Dimensions
                    </th>
                    <th
                      class="px-3 py-2 text-left"
                    >
                      Weight
                    </th>
                    <th
                      class="px-3 py-2 text-left"
                    >
                      Qty
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr
                    class="border-t border-gray-100 dark:border-gray-800"
                  >
                    <td
                      class="px-3 py-2 text-gray-900 dark:text-white"
                    >
                      Small Item
                    </td>
                    <td
                      class="px-3 py-2 text-gray-700 dark:text-gray-300"
                    >
                      50
                      ×
                      40
                      ×
                      30
                      mm
                    </td>
                    <td
                      class="px-3 py-2 text-gray-700 dark:text-gray-300"
                    >
                      500
                      g
                    </td>
                    <td
                      class="px-3 py-2 text-gray-700 dark:text-gray-300"
                    >
                      2
                    </td>
                  </tr>
                  <tr
                    class="border-t border-gray-100 dark:border-gray-800"
                  >
                    <td
                      class="px-3 py-2 text-gray-900 dark:text-white"
                    >
                      Larger Item
                    </td>
                    <td
                      class="px-3 py-2 text-gray-700 dark:text-gray-300"
                    >
                      100
                      ×
                      80
                      ×
                      20
                      mm
                    </td>
                    <td
                      class="px-3 py-2 text-gray-700 dark:text-gray-300"
                    >
                      1000
                      g
                    </td>
                    <td
                      class="px-3 py-2 text-gray-700 dark:text-gray-300"
                    >
                      1
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <p
              class="mt-3 text-sm text-red-600 dark:text-red-300"
            >
              These items exceed the dimensions or weight limits of all available boxes. Consider splitting large items or using custom shipping solutions.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
